# omnimodal

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  SERVICES_GUIDE.md  TROUBLESHOOTING.md  check_test_setup.sh  ollama_diffuser_server.py  playwright.config.ts  roadmap.md  run_all_tests.sh  start_services.sh  start_stt_ui.sh  stop_services.sh  test_image_api.sh  test_real_speech.py  test_stt_api.sh
.github/workflows/: tests.yml
backend/: .env.example  README.md  coverage.xml  generate_test_audio.py  install_stt.sh  pyproject.toml  quickstart_stt.py  test_stt_integration.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: executors.py  hardware.py  models.py  stt.py
backend/app/core/: config.py  db.py  exceptions.py  logging.py  middleware.py
backend/app/executors/: __init__.py  base.py  registry.py
backend/app/executors/audio/: stt_faster_whisper.py  stt_whisper.py  stt_whispercpp.py  tts_piper.py
backend/app/executors/image/: ollama_diffuser.py
backend/app/executors/text/: ollama.py
backend/app/executors/video/: svd.py
backend/app/models/: local_model.py
backend/app/schemas/: executors.py  hardware.py  models.py
backend/app/services/: download_manager.py  executor_service.py  hardware.py  local_model_scanner.py  model_discovery.py  model_manager.py  process_manager.py  recommendation.py
backend/app/utils/: cpu.py  gpu.py  retry.py
backend/tests/: README.md  __init__.py  conftest.py  test_api_executors.py  test_api_hardware.py  test_api_models.py  test_api_stt.py
docs/: ERROR_HANDLING.md  SCREENSHOTS.md
docs/images/: .gitkeep
e2e/: README.md  api-integration.spec.ts  chat.spec.ts  dashboard.spec.ts  fixtures.ts  image-generation.spec.ts  models.spec.ts  navigation.spec.ts
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/src/: main.tsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/hooks/: index.ts  useDownloads.ts  useErrorHandler.ts  useExecutorManagement.ts  useHardware.ts  (+7 more)
(+38 files in other folders)
