[package]
name = "unified_multimodal_frontend"
version = "0.1.0"
edition = "2021"
description = "Tauri shell for unified multimodal platform"
authors = ["Unified Platform Team <dev@unimodal.local>"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
